--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   {url:"./json/billetv2-abril-2019.json"}
   ];*/
   var listaURLObjJson = [
-  {url:"./json/billetv2-abril-2019.json"}
+  {url:"./json/dados.json"}
   ];
   tabela = $("<table>");
   tabela.attr("border",1);
